# ankimolecules

./: .envrc  LICENSE  pyproject.toml  shell.nix
src/ankimolecules/: __init__.py
src/ankimolecules/extract/: __init__.py
src/ankimolecules/generate/: __init__.py
src/ankimolecules/render/: __init__.py
src/ankimolecules/render/assets/: index.html  index.js  nglrender.js
